<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.main.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/artist_hint"
        android:orientation="horizontal"
        app:helperText="@string/artist_helper_text"
        app:helperTextEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/tvHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/search_history"
        android:gravity="center"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toBottomOf="@+id/tilAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilAuthor" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/song_hint"
        app:helperText="@string/song_helper_text"
        app:helperTextEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/tvHistory"
        app:layout_constraintStart_toStartOf="@id/tilAuthor"
        app:layout_constraintTop_toBottomOf="@id/tilAuthor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPreviousSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/previous_search"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tilSong"
        app:layout_constraintStart_toStartOf="@+id/tilSong"
        app:layout_constraintTop_toBottomOf="@+id/tilSong"
        tools:text="Previous Search: Coldplay - Adventure of a Lifetime"
        tools:visibility="visible" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fillViewport="true"
        android:visibility="gone"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="@+id/tilSong"
        app:layout_constraintStart_toStartOf="@+id/tilSong"
        app:layout_constraintTop_toBottomOf="@+id/tvPreviousSearch"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLyric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textAlignment="gravity"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="@+id/tilSong"
        app:layout_constraintStart_toStartOf="@+id/tilSong"
        app:layout_constraintTop_toBottomOf="@+id/tvPreviousSearch"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tilSong"
        app:layout_constraintStart_toStartOf="@+id/tilSong" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>